Fix: content overflow at small screen sizes

--- a/src/scss/partials/_account.scss
+++ b/src/scss/partials/_account.scss
@@ -124,7 +124,7 @@
         .files-container
         {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(min(400px, 100%), 1fr));
             gap: $default-spacing;
             margin-bottom: $default-spacing;
 
